# miniscience-4th-term

./: README.md  hello_world.cpp
01_meshes_lab/: CMakeLists.txt  README.md  circle.cpp  cube.cpp  cylinder.cpp  donut.cpp  plane.cpp
02_vtk_lab/: CMakeLists.txt  README.md  plane-8.stl  plane-vtk.cpp
03_fenics/: CMakeLists.txt  README.md  main.cpp  rect_channel.h5  rect_channel.xdmf
